--- a/Groovy/appsettings.json
+++ b/Groovy/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GroovyContext": "Server=(localdb)\\mssqllocaldb;Database=GroovyContext-30acab1e-f9ef-4fd3-afd3-a685bfc5267e;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
