Added seed data for Artist, Genre, Song

--- a/Groovy/appsettings.json
+++ b/Groovy/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GroovyContext": "Server=(localdb)\\mssqllocaldb;Database=GroovyContext-30acab1e-f9ef-4fd3-afd3-a685bfc5267e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "GroovyContext": "Server=(localdb)\\mssqllocaldb;Database=GroovyContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
