--- a/Groovy/appsettings.json
+++ b/Groovy/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GroovyContext": "Server=(localdb)\\mssqllocaldb;Database=GroovyContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "GroovyContext": "Server=(localdb)\\mssqllocaldb;Database=GroovyContext;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityContext": "Server=(localdb)\\mssqllocaldb;Database=IdentityContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
